@@ -1,3 +1,9 @@
+2003-01-13  Dmitriy Korovkin  <dkorovkin@rambler.ru>
+2003-01-13  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* include/mqueue.hxx: Allow get/put to return time out.
+	* include mqueue.inl: Ditto.
+
 2003-01-02  Gary Thomas  <gary@mlbassoc.com>
 
 	* tests/kcache2.c: New subtest for raw data cache operations.
